# adiamar25

./: README.md
C&C++/final project/: CMakeLists.txt  append_string.cpp  highest_student_grade.cpp  vl_string.hpp  vl_vector.hpp
C&C++/project 1/: CMakeLists.txt  cipher.c  main.c
C&C++/project 2/: CMakeLists.txt  main.c  sort_bus_lines.c  sort_bus_lines.h
C&C++/project 3a/: CMakeLists.txt  markov_chain.c  markov_chain.h  tweets_generator.c
C&C++/project 3b/: CMakeLists.txt  linked_list.c  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
C&C++/project 4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp
C&C++/project 5/: CMakeLists.txt  Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h
Intro2CS/ex1/: additional_file.py  hello_turtle.py  math_print.py
Intro2CS/ex11/: boggle.py  ex11_utils.py  my_boggle.py  new.py  node.py  testrehearse.py  tree_dict.py  ~$Tirgul_11.pptx
Intro2CS/ex2/: calculate_mathematical_expression.py  largest_and_smallest.py  quadratic_equation.py  shapes.py  temperature.py
project 1/: And.hdl  Mux4Way16.hdl
project 10/: CompilationEngine.py  JackAnalyzer.py
project 11/: CompilationEngine.py  JackCompiler.py  SymbolTable.py
project 2/: AUTHORS  FullAdder.hdl  ShiftLeft.hdl
project 5/: CPU.hdl
project 6/: Code.py  Main.py
project 7/: CodeWriter.py
project 8/: CodeWriter.py  Main.py
(+126 files in other folders)
